--- a/style.css
+++ b/style.css
@@ -130,8 +130,8 @@ body {
 .command-btn.function { background-color: var(--color-function); }
 
 .legend-row {
-   
-     background: #fafafa;
+    font-weight: bold;
+    background: #fafafa;
     border-radius: 12px;
     padding: 15px 10px;
     box-shadow: inset 0 0 6px rgba(0,0,0,0.05);
